log output/manifests/logoutput-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: logoutput
spec:
  type: NodePort
  selector:
    app: logapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logapp-dep
  namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logapp
  template:
    metadata:
      labels:
        app: logapp
    spec:
      volumes:
        - name: timestamps
          emptyDir: {}
        - name: config-volume
          configMap:
            name: logapp-config

      containers:
        - name: logapp
          image: eeritvan/log_app:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: timestamps
            mountPath: /usr/src/app/stamps/
          - name: config-volume
            mountPath: /usr/src/app/config
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"

        - name: stampgenerator
          image: eeritvan/stamp_generator_app:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: timestamps
            mountPath: /usr/src/app/stamps/
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
