log output/manifests/pingpong-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: logoutput
spec:
  type: NodePort
  selector:
    app: pingpongapp
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongapp
  template:
    metadata:
      labels:
        app: pingpongapp
    spec:
      containers:
        - name: pingpong
          image: PINGPONG/IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /health
              port: 3001
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
