log output/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: logoutput
spec:
  type: ClusterIP
  selector:
    app: logapp
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
