log output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logapp-svc
spec:
  type: ClusterIP
  selector:
    app: logapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
